--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,38 +1,5 @@
-body {
-  margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-p {
-  margin: 0px;
-}
-
-ul {
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-}
-
-li {
-  margin: 0px;
-  padding: 0px;
-}
-
-a {
-  text-decoration: none;
-}
-
-img {
-  max-width: 100%;
-}
-
 .header-bg {
-  background-color: #000000;
+  background-color: var(--cor-12);
 }
 
 .header {
@@ -41,10 +8,7 @@ img {
   flex-wrap: wrap;
   gap: 20px;
   align-items: center;
-  box-sizing: border-box;
-  padding: 20px;
-  max-width: 1200px;
-  margin: 0 auto;
+  padding: 20px 0px;
 }
 
 .header-menu {
@@ -54,10 +18,8 @@ img {
 }
 
 .header-menu a {
-  color: #ffffff;
   padding: 16px 0;
   display: inline-block;
-  font-size: 18px;
   position: relative;
 }
 
@@ -66,7 +28,7 @@ img {
   display: block;
   height: 2px;
   width: 0%;
-  background-color: #ffffff;
+  background-color: var(--cor-0);
   margin: 4px;
   transition: 0.3s;
   position: absolute;
@@ -82,13 +44,13 @@ img {
   }
 
   .header-menu a {
-    background-color: #111111;
+    background-color: var(--cor-11);
     padding: 12px 16px;
     border-radius: 4px;
   }
 
   .header-menu a:hover {
-    background-color: #2e2e2e;
+    background-color: var(--cor-10);
   }
 
   .header a::after {
