--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,7 +1,6 @@
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
-  margin-bottom: 2000px;
   color: #111111;
 }
 
@@ -10,7 +9,8 @@ h2,
 h3,
 h4,
 h5,
-p {
+p,
+blockquote {
   margin: 0px;
 }
 
