--- a/css/ultilidades.css/componentes.css
+++ b/css/ultilidades.css/componentes.css
@@ -14,6 +14,20 @@
   border-radius: 5px;
   text-transform: uppercase;
   font: 600 1.125rem/1.35 "poppins", sans-serif;
+  max-width: max-content;
+}
+
+.botao:hover {
+  background: linear-gradient(#ffb60d, #e59317);
+}
+
+.botao.secundario {
+  background: var(--cor-10);
+  color: var(--cor-2);
+}
+
+.botao.secundario:hover {
+  background: var(--cor-9);
 }
 
 @media (max-width: 600px) {
