--- a/css/seguros/seguros.css
+++ b/css/seguros/seguros.css
@@ -9,6 +9,10 @@
   gap: 40px;
   align-items: center;
 }
+#seguros .seguros {
+  padding-top: 0px;
+  padding-bottom: 60px;
+}
 
 .seguros h2 {
   grid-column: 1 / -1;
@@ -19,6 +23,7 @@
   padding: 32px 32px 32px 60px;
   display: grid;
   grid-template-columns: 1fr auto;
+  border-radius: 5px;
 }
 
 .seguros-item h3 {
